--- a/obo-stadium/css/used-in-js.css
+++ b/obo-stadium/css/used-in-js.css
@@ -5,6 +5,11 @@
   border: none !important;
 }
 
+.active {
+  color: #F04E40;
+  font-weight: bold;
+}
+
 .active-nav {
   border-bottom: 3px solid white !important;
 }
