--- a/obo-stadium/sass/order-details.scss
+++ b/obo-stadium/sass/order-details.scss
@@ -5,6 +5,7 @@
   margin: $sixteen-pixel $forty-pixel;
   padding: $zero-pixel;
   padding-bottom: $twenty-pixel;
+  border: $zero-pixel !important;
 }
 
 .main-content {
