--- a/obo-stadium/sass/used-in-js.scss
+++ b/obo-stadium/sass/used-in-js.scss
@@ -6,6 +6,11 @@
     border: $none !important;
 }
 
+.active {
+    color: $main-color;
+    font-weight: bold;
+}
+
 .active-nav {
     border-bottom: 3px solid white !important;
 }
