--- a/obo-stadium/template/account.pug
+++ b/obo-stadium/template/account.pug
@@ -37,18 +37,18 @@ block mainContent
               .setting-box
                 .full-name.item-row.col-md-10
                   .text Họ tên
-                  input.form-control(value="Cody")
+                  input.form-control
                 .email.item-row.col-md-10
                   .text Email
-                  input.form-control(value="congdinh2395@gmail.com")
+                  input.form-control(disabled)
                 .password.item-row.col-md-10
                   .text Mật khẩu
                   .password-wrapper
-                    input.form-control(value="********")
+                    input.form-control(type="password", disabled)
                     a.change-password.text-btn(href="./") Đổi mật khẩu
                 .phone.item-row.col-md-10
                   .text Số điện thoại
-                  input.form-control(value="0365304675")
+                  input.form-control
                 .gender.item-row.col-md-10
                   .text Giới tính
                   .gender-input-wrapper
