--- a/obo-stadium/template/bid-details.pug
+++ b/obo-stadium/template/bid-details.pug
@@ -64,4 +64,5 @@ block footer
   include ./template-parts/footer
 
 block customizeScript
+  script(src="./script/buy-selling-product.js")
   script(src="./script/except-home-page.js")
