--- a/obo-stadium/template/common.pug
+++ b/obo-stadium/template/common.pug
@@ -36,7 +36,9 @@ html(lang="en")
 
       // Modals
       include ./template-parts/login-modal
-
+      
+      a(href="#").back-to-top
+        img(src="./image/back-to-top.png", alt="")
     block footer
 
     script(type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js")
