--- a/obo-stadium/template/post.pug
+++ b/obo-stadium/template/post.pug
@@ -105,14 +105,7 @@ block mainContent
       .author-info.col-md-10.col-12
         .author
           | Cody
-        .details
-          | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          | labore et dolore
-          | magna
-          | aliqua. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Gravida quis blandit
-          | turpis cursus in.
-          | Elit sed
-          | vulputate mi sit amet mauris commodo. Nisl pretium fusce id velit.
+        .details Là một người yêu thích văn hoá sát mặt đất, mình muốn lan toả niềm đam mê của bản thân đến với tất cả mọi người.
         .social-info
           a.email.icon(href='#')
             i.fas.fa-envelope
@@ -128,7 +121,7 @@ block mainContent
     .carousel
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-1-thumnails.jpg' alt='news-1')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -141,7 +134,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-2.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-2-thumnails.jpg' alt='news-2')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -154,7 +147,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-3.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-3-thumnails.jpg' alt='news-3')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -167,7 +160,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-4.png' alt='news-1')
+          img.card-img-top(src='./image/news/news-4-thumnails.jpg' alt='news-4')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -180,7 +173,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-5.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-5-thumnails.jpg' alt='news-5')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -193,7 +186,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-6-thumnails.jpg' alt='news-6')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
@@ -206,7 +199,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
       .news.position-relative
         .card
-          img.card-img-top(src='./image/news/news-1.jpg' alt='news-1')
+          img.card-img-top(src='./image/news/news-7-thumnails.jpg' alt='news-7')
           .card-body
             h5.card-title Jordan Brand k&#x1EF7; ni&#x1EC7;m FIBA b&#x1EB1;ng m&#x1ED9;t BST &ldquo;m&atilde;n nh&atilde;n&rdquo;
             p.card-text.news-short-desc
