--- a/obo-stadium/css/bid-details.css
+++ b/obo-stadium/css/bid-details.css
@@ -5,7 +5,7 @@
 }
 .main-content .item,
 .main-content .item-small {
-  border: 0px;
+  border: 0px !important;
 }
 .main-content .item {
   display: grid;
