--- a/obo-stadium/template/buying-order.pug
+++ b/obo-stadium/template/buying-order.pug
@@ -265,4 +265,5 @@ block footer
   include ./template-parts/footer
 
 block customizeScript
+  script(src="./script/buying-order.js")
   script(src="./script/except-home-page.js")
