--- a/obo-stadium/template/buying-selling-products.pug
+++ b/obo-stadium/template/buying-selling-products.pug
@@ -273,4 +273,5 @@ block footer
   include ./template-parts/footer
 
 block customizeScript
+  script(src="./script/buy-selling-product.js")
   script(src="./script/except-home-page.js")
