--- a/obo-stadium/template/template-parts/left-sidebar-account.pug
+++ b/obo-stadium/template/template-parts/left-sidebar-account.pug
@@ -7,8 +7,8 @@
       .edit-profile Chỉnh sửa tài khoản
   .break-line
   .nav-sidebar
+    a.account.nav-item(href="./account.html") Quản lý tài khoản
     a.selling-buying-products.nav-item(href='./buying-selling-products.html') Quản lý mua/bán sản phẩm
     a.buying-order.nav-item(href='./buying-order.html') Đơn hàng mua
-    a.selling-buying-products.nav-item Đơn hàng bán
-    a.account.nav-item(href="./account.html") Quản lý tài khoản
+    a.selling-order.nav-item Đơn hàng bán
     a.btn.btn-primary.red-btn.sign-out-btn(href="./index.html") Đăng xuất
