update rules, policy, details of account page

--- a/obo-stadium/css/buying-selling-products.css
+++ b/obo-stadium/css/buying-selling-products.css
@@ -5,5 +5,15 @@
 .main-content .nav-link {
   display: inline-block;
 }
+.main-content .pending {
+  color: #C1554E;
+}
+.main-content .cancel {
+  color: #ABACAD;
+  text-decoration: line-through;
+}
+.main-content .successfully {
+  color: #12B76D;
+}
 
 /*# sourceMappingURL=buying-selling-products.css.map */
