--- a/obo-stadium/sass/faqs.scss
+++ b/obo-stadium/sass/faqs.scss
@@ -12,6 +12,10 @@ header {
     margin: $fifty-pixel $zero-pixel 150px $zero-pixel;
 }
 
+.question {
+    font-weight: bold;
+}
+
 .main-content {
     margin-top: $fifty-pixel;
 }
