--- a/obo-stadium/template/template-parts/footer.pug
+++ b/obo-stadium/template/template-parts/footer.pug
@@ -5,6 +5,6 @@ footer.container-fluid
         img.img-fluid(src='./image/logo-white.png' alt='logo')
       .footer-link.col-md-9.col-12.d-flex.justify-content-md-end.align-items-center.flex-md-row.flex-column
         a.item(href='./faqs.html') Các câu hỏi thường gặp
-        a.item(href='#') Điều khoản
-        a.item(href='#') Chính sách
+        a.item(href='./rules.html') Điều khoản
+        a.item(href='./policy.html') Chính sách
         a.item(href='#') Hỗ trợ
