--- a/obo-stadium/template/faqs.pug
+++ b/obo-stadium/template/faqs.pug
@@ -25,38 +25,8 @@ block mainContent
     .about-obo
       h2.h2
         | OBO Stadium l&agrave; g&igrave;?
-      p.content
-        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sodales tristique bibendum.
-        | Vestibulum feugiat auctor
-        | nunc, eu semper felis viverra a. Nam ullamcorper mi lacus. Maecenas vitae sagittis tortor. In
-        | faucibus aliquet
-        | turpis.
-        | Etiam nec consequat nisi, at porttitor ipsum. Donec quis molestie risus. In hac habitasse platea
-        | dictumst. Nunc
-        | commodo
-        | metus metus, sed ultrices metus aliquet id. In eu sapien nec tellus sodales venenatis.
-      p.content
-        | Curabitur porttitor purus aliquet nulla tempor tincidunt. Morbi scelerisque tellus ultricies neque
-        | condimentum, nec
-        | pretium nunc placerat. Vivamus felis turpis, dictum ut dui vitae, interdum suscipit ante. In enim
-        | nibh, sollicitudin
-        | in
-        | mi vitae, elementum auctor ante. Vivamus sed metus sapien. Aliquam quis mauris risus. Proin suscipit
-        | fermentum velit
-        | sit
-        | amet vehicula. Etiam bibendum et risus ut malesuada. In pulvinar velit ut nisl aliquam laoreet.
-        | Donec diam risus,
-        | varius
-        | a ipsum in, pretium vehicula elit. vestibulum laoreet tincidunt. Proin volutpat eros sed nisi
-        | posuere mattis.
-        | Curabitur
-        | ipsum arcu, tristique eu nibh vel, tempor pharetra elit. In laoreet nisi odio, eu iaculis tellus
-        | rutrum nec. Donec
-        | at
-        | feugiat dui, vel efficitur risus. Sed maximus, lectus nec egestas sodales, lectus quam condimentum
-        | purus, non
-        | dignissim
-        | ipsum odio non elit.
+      p.content OBO Stadium là website thương mại điện tử đầu tiên và duy nhất tại Việt Nam chuyên biệt về giày dép nói chung và sneakers nói riêng. OBO Stadium ra đời với hoài bão tạo nên một bước đột phá lớn trong lĩnh vực thương mại điện tử chuyên biệt về giày dép ở Việt Nam. OBO Stadium đặt mục tiêu trở thành hệ thống bán lẻ số một tại Việt Nam, tiến đến vươn ra thị trường khu vực và thế giới. Sứ mệnh của OBO Stadium là mang thương mại điện tử đến với mọi đối tượng khách hàng, từ những tầng lớp bình dân nhất, ít quan tâm đến công nghệ nhất. Từ đó, OBO Stadium sẽ từng bước xây dựng văn hoá tiêu dùng tiện lợi và văn minh cho người Việt Nam.
+      p.content OBO Stadium cũng tạo ra cơ hội cho các nhà kinh doanh bán lẻ và các Nhà sản xuất nội địa mở rộng thị trường, có được một môi trường phát triển lành mạnh, hiệu quả. Cũng trên hệ thống này, OBO Stadium mang đến cho người tiêu dùng những sản phẩm, dịch vụ chất lượng cao, thúc đẩy và sự phát triển của lĩnh vực thương mại điện tử và ngành bán lẻ tại Việt Nam. Đây là một phần quan trọng tạo ra động lực mạnh mẽ để phát triển nền kinh tế, từ đó góp phần vào sự thịnh vượng của đất nước.
     .collapse-content
       #accordionExample.accordion
         .card
@@ -66,19 +36,15 @@ block mainContent
                 | Qu&#x1EA3;n l&yacute; t&agrave;i kho&#x1EA3;n
                 i.fas.fa-chevron-down
           #collapseOne.collapse(aria-labelledby='headingOne' data-parent='#accordionExample')
-            .card-body
-              | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-              | squid. 3 wolf
-              | moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-              | laborum eiusmod.
-              | Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-              | assumenda
-              | shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              | nesciunt sapiente ea
-              | proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              | farm-to-table, raw denim
-              | aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable
-              | VHS.
+            .card-body 
+              .question 1. Làm thế nào để đăng ký tài khoản trên OBO Stadium?
+              .answer Quý khách bấm nút "Đăng ký" ở góc phải trên cùng màn hình, điền đủ các thông tin theo yêu cầu.
+            .card-body 
+              .question 2. Vì sao tôi không nhận được email kích hoạt tài khoản?
+              .answer Nếu Quý khách không tìm thấy email kích hoạt trong mục Inbox, vui lòng kiểm tra trong mục Thư rác/Spam/Email.
+            .card-body 
+              .question 3. Làm thế nào để thay đổi thông tin trong tài khoản mua hàng của tôi?
+              .answer Để thay đổi thông tin trong tài khoản mua hàng tại OBO Stadium, Quý khách vui lòng đăng nhập vào tài khoản của mình. Click vào nút tam giác cạnh tên tài khoản của bạn, chọn » Quản lý tài khoản » click chọn Thông tin cơ bản » click chỉnh sửa để chỉnh sửa thông tin cần thiết..
         .card
           #headingTwo.card-header
             h2.mb-0
